# advent-of-code-2023

./: README.md  advent.py  cli.py  day1.py  day2.py  pyproject.toml  solution.py
advent/: __init__.py  day.py  year.py
cli/: advent.py
year0/: day0.py
year0/inputs/day0/: main.txt  part1  part2.txt  test  test1  test2.txt
year0000/: day0.py
year0000/day0/: main.txt  part1.txt  part2.txt
year2023/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
year2023/day1/: day1.py
year2023/day2/: solution.py
year2023/day3/: day3.py
year2023/day4/: solution.py
year2023/day5/: solution.py
