[tool.poetry]
name = "advent-of-code"
version = "0.0.0"
description = "This package houses all of my solutions for the 2023 Advent of Code!"
authors = ["Jayden Wool <52765228+jwoolnt@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
